--- a/_includes/blog/footer.html
+++ b/_includes/blog/footer.html
@@ -9,7 +9,7 @@
                     {% endif %}
                     {{ site.data.i18n[site.lang].theme_info }}
                 </div>
-                <div class="social-links">
+                <!-- <div class="social-links">
                     {% if site.author.email %}
                         <a class="ico-gmail" href="mailto:{{ site.author.email }}" rel="me" target="_blank" title="email"></a>
                     {% endif %}
@@ -19,7 +19,7 @@
                             <a class="ico-{{ link.name }}" href="{{ link.url }}" rel="me" target="_blank" title="{{ link.name }}"></a>
                         {% endif %}
                     {% endfor %}
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
