--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,7 +42,7 @@
         <h1 class="animated hidden">
             <a class="btn-enter btn-light" title="{{ site.data.i18n[site.lang].enter_blog }}" href="{{ site.paths.blog | relative_url }}">{{ site.data.i18n[site.lang].enter_blog }}</a>
         </h1>
-        <div class="social-links animated hidden">
+        <!-- <div class="social-links animated hidden">
             <a class="btn-light ico-rss" href="{{ site.baseurl }}/feed.xml" rel="me" target="_blank" title="feed"></a>
             {% if site.author.email %}
                 <a class="btn-light ico-gmail" href="mailto:{{ site.author.email }}" rel="me" target="_blank" title="email"></a>
@@ -52,7 +52,7 @@
                     <a class="btn-light ico-{{ link.name }}" href="{{ link.url }}" rel="me" target="_blank" title="{{ link.name }}"></a>
                 {% endif %}
             {% endfor %}
-        </div>
+        </div> -->
     </div>
 
     {% include home/scripts.html %}
